resolved z-index issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,6 +49,7 @@ body {
   width: 100% !important;
   background: #f8f4f0;
   padding-top: 25px;
+  z-index: auto !important;
 }
 
 .mat-mdc-paginator-range-label,
